--- a/mentions.html
+++ b/mentions.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -14,14 +15,15 @@
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="msapplication-config" content="favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
-		<link rel="stylesheet" href="css/stylesheet_mentions.css" />
-		<link rel="stylesheet" href="css/header_footer.css" />
+		<link rel="stylesheet" href="css/specific.css">
+		<link rel="stylesheet" href="css/common.css">
+		<link rel="stylesheet" href="css/responsive.css" />
 	</head>
 	<body>
 		<header>
 			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
-		<main>
+		<main class="menu">
 			<div>
 				<h2>MENTIONS LEGALES*</h2>
 			</div>
@@ -85,7 +87,7 @@
 			<div>
 				<em>* source:https://www.service-public.fr/professionnels-entreprises/vosdroits/F31228</em>
 			</div>
-			<footer>
+			<footer class="legale">
 				<p class="btn">
 					<a class="footer__mention" href="mentions.html" target="_blank">Mentions légales</a>
 				</p>
