--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte! Intéressé ? C’est ici !">
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&family=Dosis&family=Kaushan+Script&family=Rochester&display=swap" rel="stylesheet">
+		<meta name="description" content="Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte! Intéressé ? C’est ici !">
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&family=Dosis1&family=Kalam:wght@300&family=Kaushan+Script&family=Rochester&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -24,23 +23,23 @@
 	<body>
 		<main>
 			<header>
-				<a href=index.html><h1>ohmyfood</h1></a>
+				<h1>ohmyfood</h1></a>
 			</header>
-			<section class="presentationmenu">
+			<section>
 				<div class="presentationmenu__miniature">
-					<div class="presentationmenu--menu1">
-						<a class="carte carte1" href="menu1.html">
+					<div class="presentationmenu__menu1">
+						<a class="presentationmenu__carte1" href="menu1.html">
 							<div  class="zoom">
 								<i class="fab fa-itunes-note"></i>
 								<p class="font1">
 									La note enchantée
 								</p>
-								<h2>MENU</h2>
+								<h2 class="presentationfont">MENU</h2>
 							</div>
 						</a>
 					</div>
-					<div class="presentationmenu--menu2">
-						<a class="carte carte2" href="menu2.html">
+					<div class="presentationmenu__menu2">
+						<a class="presentationmenu__carte2" href="menu2.html">
 							<div class="zoom">
 								<p class="degrade degrademenu2">
 									Le chic à la française
@@ -51,27 +50,23 @@
 							</div>
 						</a>
 					</div>
-					<div class="presentationmenu--menu3">
-						<a class="carte carte3" href="menu3.html">
+					<div class="presentationmenu__menu3">
+						<a class="presentationmenu__carte3" href="menu3.html">
 							<div class="zoom">
 								<p class="degrade degrademenu3">
 									Le délice des papilles
 								</p>
-								<h2>
-									Menu
-								</h2>
+								<h2 class="presentationfont">Menu</h2>
 							</div>
 						</a>
 					</div>
-					<div class="presentationmenu--menu4">
-						<a class="carte carte4" href="menu4.html">
+					<div class="presentationmenu__menu4">
+						<a class="presentationmenu__carte4" href="menu4.html">
 							<div class="zoom">
 								<p class="degrade degrademenu4">
 									La palette du goût
 								</p>
-								<h2>
-									Menu
-								</h2>
+								<h2 class="presentationfont">Menu</h2>
 							</div>
 						</a>
 					</div>
