--- a/menu1.html
+++ b/menu1.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="La note enchantée, c’est la finesse des plats pour vos papilles. Réservez votre menu en ligne.">
+		<link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -28,7 +28,7 @@
 		<main class="menu menu1">
 			<section class="section1">
 				<span class="logodebut"><i class="fab fa-itunes-note"></i></span>
-				<h2 class="h2menu">La note enchantée</h2>
+				<h2 class="h2menu menu1__font">La note enchantée</h2>
 			</section>
 			<section>
 				<div>
@@ -137,10 +137,10 @@
 				</div>
 			</section>
 			<section>
-				<h2 class="logofin"><i class="fab fa-itunes-note"></i>La note enchantée</h2>
+				<h2 class="logofin"><i class="fab fa-itunes-note espacefin"></i>   La note enchantée</h2>
 			</section>
 		</main>
-		<footer class="footer2">
+		<footer>
 			<p class="btn">
 				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
 			</p>
