--- a/menu2.html
+++ b/menu2.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,9 +31,9 @@
 			<section>
 				<div class="color1">
 					<h3>
-						<img class="hrmenu2__hr hr--orange" src="logos/hr_menu2.png" alt="frise">
+						<img class="hrmenu2__hr" src="logos/hr_menu21.png" alt="frise">
 						<span class="h3__underline underline--21 underline--xpetit">Pour se mettre en appétit</span>
-						<img class="hrmenu2__hr hr--orange hr--reverse" src="logos/hr_menu2.png" alt="frise">
+						<img class="hrmenu2__hr hr--reverse" src="logos/hr_menu21.png" alt="frise">
 					</h3>
 					<div  class="blocmenu">
 						<div class="blocmenu__plat">
@@ -67,9 +66,9 @@
 			<section>
 				<div class="color2">
 					<h3>
-						<img class="hrmenu2__hr  hr--purple" src="logos/hr_menu2.png" alt="frise">
+						<img class="hrmenu2__hr" src="logos/hr_menu22.png" alt="frise">
 						<span class="h3__underline underline--22 underline--petit">Plaisir des papilles</span>
-						<img class="hrmenu2__hr hr--purple hr--reverse" src="logos/hr_menu2.png" alt="frise">
+						<img class="hrmenu2__hr hr--reverse" src="logos/hr_menu22.png" alt="frise">
 					</h3>
 					<div  class="blocmenu">
 						<div class="blocmenu__plat">
@@ -102,9 +101,9 @@
 			<section>
 				<div class="color3">
 					<h3>
-						<img class="hrmenu2__hr hr--blue" src="logos/hr_menu2.png" alt="frise">
+						<img class="hrmenu2__hr" src="logos/hr_menu23.png" alt="frise">
 						<span class="h3__underline underline--23 underline--petit">Gourmandises sucrées</span>
-						<img class="hrmenu2__hr hr--blue hr--reverse" src="logos/hr_menu2.png" alt="frise">
+						<img class="hrmenu2__hr hr--reverse" src="logos/hr_menu23.png" alt="frise">
 					</h3>
 					<div  class="blocmenu menu__dessert">
 						<div class="blocmenu__plat">
