--- a/menu3.html
+++ b/menu3.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Le délice des papilles vous propose de délicieux plats orientés Terre ou Mer, à votre convenance.">
+		<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
