--- a/menu1.html
+++ b/menu1.html
@@ -30,7 +30,7 @@
 				<span class="logodebut"><i class="fab fa-itunes-note"></i></span>
 				<h2 class="h2menu menu1__font">La note enchantée</h2>
 			</section>
-			<section>
+			<section  class="presentationfont">
 				<div>
 					<div>
 						<h3>
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</section>
-			<section>
+			<section  class="presentationfont">
 				<div>
 					<h3>
 						<img class="hrmenu1" src="logos/hr_gauche.png" alt="frise">
@@ -110,7 +110,7 @@
 					</div>
 				</div>
 			</section>
-			<section>
+			<section  class="presentationfont">
 				<div>
 					<h3>
 						<img class="hrmenu1" src="logos/hr_gauche.png" alt="frise">
